@@ -1,8 +1,13 @@
 mdcfg (1.24) UNRELEASED; urgency=low
 
   * General whitespace and coding style cleanup.
+  * Support deleting a RAID device if only /dev/mdX exists and /dev/md/X
+    does not.
+  * When enabling existing RAID devices, assemble them using the /dev/md/X
+    notation so that both /dev/mdX and /dev/md/X get created. This is more
+    consistent with newly created devices.
 
- -- Frans Pop <fjp@debian.org>  Mon, 31 Mar 2008 16:14:32 +0200
+ -- Frans Pop <fjp@debian.org>  Mon, 31 Mar 2008 16:15:15 +0200
 
 mdcfg (1.23) unstable; urgency=low
 
